--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -50,8 +50,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1a36550a-6337-44aa-ac27-d384a2609148",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6053ed0-5674-4ac7-9821-32b773029990",
    "metadata": {},
    "outputs": [],
    "source": []
