--- a/02python_basic.ipynb
+++ b/02python_basic.ipynb
@@ -1568,6 +1568,8 @@
     }
    ],
    "source": [
+    "#map (리스트 문자열을 숫자로 변경)\n",
+    "\n",
     "subject=input(\"국어, 영어, 수학, 과학 점수를 입력하세요: \")\n",
     "subject=subject.split(',')\n",
     "a=list(map(int,subject))\n",
@@ -1577,8 +1579,302 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3027e07e-44fe-4764-9683-1e7f9ec0d4bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "국어, 영어, 수학, 과학 점수를 입력해주세요:  11,22,33,44\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "평균은 27.5 점 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#map\n",
+    "\n",
+    "kor, eng, mat, sci=map(int,input(\"국어, 영어, 수학, 과학 점수를 입력해주세요: \").split(','))\n",
+    "avg= (kor+eng+mat+sci)/4\n",
+    "print(\"평균은\", avg, \"점 입니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9231b540-1744-422c-ab37-dcc7628c3859",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value 1.1 1 [1, 2, 'text']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"value\", 1.1, 1, [1,2,'text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ace4024b-39bf-428d-893a-b8b8aa7bf7bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "줄이 바뀌지 않습니다."
+     ]
+    }
+   ],
+   "source": [
+    "print(\"줄이 바뀌지 않습니다.\", end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8e077be1-3e10-4305-a057-3e6b9f89eb23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021/02/03 18:33:23\n"
+     ]
+    }
+   ],
+   "source": [
+    "year='2021'\n",
+    "month='02'\n",
+    "day='03'\n",
+    "hour='18'\n",
+    "minute='33'\n",
+    "second='23'\n",
+    "\n",
+    "print(year, month, day, end=\" \", sep=\"/\")\n",
+    "print(hour, minute, second, sep=\":\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9189610d-5bfa-4f3a-93b9-978be2b0fd09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "사과와 귤의 갯수를 입력해주세요:  10,20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "총 가격은 14000원입니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "app, tan=map(int,input(\"사과와 귤의 갯수를 입력해주세요: \").split(','))\n",
+    "apple_price=1000\n",
+    "tan_price=200\n",
+    "total_price=app*apple_price+tan*tan_price\n",
+    "\n",
+    "print(\"총 가격은 \", total_price, \"원입니다\", sep=\"\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0b5420fa-6dc9-42eb-b717-f017e896ce4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"{}\". format(10)) #중괄호와 인수 갯수 맞게,, 중괄호가 더 많은면 에러"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8d0b3234-9392-49b8-bc20-ae74f11ea9aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "time.localtime().tm_year,\n",
+    "time.localtime().tm_mon,\n",
+    "time.localtime().tm_mday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "06409096-b0a6-43e1-b6d2-f299c2616a56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10 20 30\n",
+      "1 2 3 4 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{10}\")\n",
+    "print(f\"{10} {20} {30}\")\n",
+    "print(f\"{1} {2} {3} {4} {5}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8fd1ae16-c12c-4596-b750-084a6e3ab90f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOF while scanning triple-quoted string literal (3939411395.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [9]\u001b[1;36m\u001b[0m\n\u001b[1;33m    {time.localtime().tm_year}년 {time.localtime().tm_mon}월 {time.localtime().tm_mday}일 입니다.\u001b[0m\n\u001b[1;37m                                                                                           \n^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOF while scanning triple-quoted string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "today=f \"\"\"오늘의 날짜를 알려드립니다!\n",
+    "{time.localtime().tm_year}년 {time.localtime().tm_mon}월 {time.localtime().tm_mday}일 입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "db281787-37e5-42f1-a704-0d732ddff342",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_value1 = \"3\"\n",
+    "print(type(input_value1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6132914d-7e3b-4bb7-8aa9-82bd92415e8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(input_value1) is int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "831aeddd-51f8-44f0-a52e-cb1662cf706a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정수가 아닙니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if type(input_value1) is int:\n",
+    "    print(\"input_value1은 정수입니다.\")\n",
+    "else:\n",
+    "    print(\"정수가 아닙니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0413d0b7-742c-4e06-aefb-84ec04f1e82d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10보다 작고, 5보다도 작습니다.\n",
+      "끝\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=4 \n",
+    "if c>10:\n",
+    "    print(\"10보다 큽니다.\")\n",
+    "elif c<5: \n",
+    "    print(\"10보다 작고, 5보다도 작습니다.\")\n",
+    "\n",
+    "print(\"끝\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9c5461b-c01b-484d-9698-857b45a47c0f",
    "metadata": {},
    "outputs": [],
    "source": []
