--- a/03python_basic.ipynb
+++ b/03python_basic.ipynb
@@ -493,7 +493,9 @@
    "id": "0dab022c-612a-4257-aa65-e9fc106f071d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result=\"+\".join(str(i) for i in range(1, num+1,2))"
+   ]
   },
   {
    "cell_type": "code",
