python_basic day6

--- a/04python_basic.ipynb
+++ b/04python_basic.ipynb
@@ -939,8 +939,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fbf87cfa-f088-4f89-a801-db4015522e11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요: 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 * 1 = 4\n",
+      "4 * 2 = 8\n",
+      "4 * 3 = 12\n",
+      "4 * 4 = 16\n",
+      "4 * 5 = 20\n",
+      "4 * 6 = 24\n",
+      "4 * 7 = 28\n",
+      "4 * 8 = 32\n",
+      "4 * 9 = 36\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input('숫자를 입력하세요:'))\n",
+    "\n",
+    "for i in range(1, 10):\n",
+    "    print(f'{x} * {i} = {x*i}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bb7978a-d659-46e5-96ca-0ca9bc5b562e",
    "metadata": {},
    "outputs": [],
    "source": []
