--- a/06python_basic.ipynb
+++ b/06python_basic.ipynb
@@ -398,12 +398,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "60bcb3bb-4021-4d36-878e-35458590e89d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4}\n"
+     ]
+    }
+   ],
    "source": [
-    "list_sample = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4]\n"
+    "list_sample = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4]\n",
+    "set_sample=set(list_sample)\n",
+    "print(set_sample)"
    ]
   },
   {
