--- a/07python_basic.ipynb
+++ b/07python_basic.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "id": "c68179fb-b416-46a6-97ce-d3d13c1fbf18",
    "metadata": {
     "tags": []
@@ -310,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "31\n"
      ]
     }
    ],
@@ -333,7 +333,7 @@
     "print(days(1900,2))\n",
     "print(days(2000,2))\n",
     "\n",
-    "year, month=input(\"연도와 월을 입력하세요:\").split()\n",
+    "year, month= map(int, input(\"연도와 월을 입력하세요:\").split())\n",
     "print(days(year, month))"
    ]
   },
@@ -399,11 +399,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "2dda11e6-f502-4124-b2fa-be9c70924bca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "메뉴를 보고 싶으시다면 Y, y, 예를 써주시고\n",
+      "안 봐도 되시면 N, n, 아니오를 써주세요. 예\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "한식은 ['덮밥', '비빔밥', '볶음밥', '김치찌개', '부대찌개', '생선찜', '생선구이', '냉면', '설렁탕'] 이 있습니다.\n",
+      "\n",
+      "중식은 ['짜장&짬뽕', '마라탕'] 이 있습니다.\n",
+      "\n",
+      "일식은 ['돈까스', '우동', '초밥', '회', '샤브샤브'] 이 있습니다.\n",
+      "\n",
+      "양식은 ['피자', '치킨', '햄버거'] 이 있습니다.\n",
+      "\n",
+      "기타는 ['고기', '곱창', '밥버거'] 이 있습니다.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "한식, 중식, 일식, 양식, 기타 중에 입력하세요: 일식\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "일식 을/를 고르셨습니다.\n",
+      "\n",
+      "돈까스 이/가 선택되었습니다.\n",
+      "점심식사 맛있게 하세요^^\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "menu_list = {\"한식\":[\"덮밥\", \"비빔밥\", \"볶음밥\", \"김치찌개\", \"부대찌개\",\n",
+    "                    \"생선찜\", \"생선구이\", \"냉면\", \"설렁탕\"],\n",
+    "              \"중식\":[\"짜장&짬뽕\", \"마라탕\"],\n",
+    "             \"일식\":[\"돈까스\", \"우동\", \"초밥\", \"회\", \"샤브샤브\"],\n",
+    "             \"양식\":[\"피자\", \"치킨\", \"햄버거\"],\n",
+    "             \"기타\":[\"고기\", \"곱창\", \"밥버거\"]}\n",
+    "def select_genre():\n",
+    "    while True:\n",
+    "        var = input(\"\\n한식, 중식, 일식, 양식, 기타 중에 입력하세요:\")\n",
+    "        if var in (\"한식\", \"중식\", \"일식\", \"양식\", \"기타\"):\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"다시 입력해주세요.\")\n",
+    "    return var\n",
+    "def view_menu_list():\n",
+    "    while True:\n",
+    "        var = input(\"\"\"\n",
+    "메뉴를 보고 싶으시다면 Y, y, 예를 써주시고\n",
+    "안 봐도 되시면 N, n, 아니오를 써주세요.\"\"\")\n",
+    "        if var == \"Y\" or var == \"y\" or var == \"예\":\n",
+    "            print(\"\\n한식은\", menu_list[\"한식\"],\"이 있습니다.\\n\")\n",
+    "            print(\"중식은\", menu_list[\"중식\"],\"이 있습니다.\\n\")\n",
+    "            print(\"일식은\", menu_list[\"일식\"],\"이 있습니다.\\n\")\n",
+    "            print(\"양식은\", menu_list[\"양식\"],\"이 있습니다.\\n\")\n",
+    "            print(\"기타는\", menu_list[\"기타\"],\"이 있습니다.\")\n",
+    "            break\n",
+    "        elif var == \"N\" or var == \"n\" or var == \"아니오\":\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"다시 입력하세요\")\n",
+    "view_menu = view_menu_list()\n",
+    "menu_type = select_genre()\n",
+    "print(f\"\\n{menu_type} 을/를 고르셨습니다.\")\n",
+    "selected = random.choice(menu_list[menu_type])\n",
+    "print(f\"\\n{selected} 이/가 선택되었습니다.\\n점심식사 맛있게 하세요^^\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "96772904-23f3-4029-af30-4a7ac710aa68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "이름은 무엇인가요?:  마리아\n",
+      "나이는 무엇인가요?:  20\n",
+      "주소는 무엇인가요?:  서울시 강남구\n",
+      "이름은 무엇인가요?:  제임스\n",
+      "나이는 무엇인가요?:  21\n",
+      "주소는 무엇인가요?:  서울시 구로구\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "마리아 - 이름:마리아, 나이:20, 주소:서울시 강남구\n",
+      "제임스 - 이름:제임스, 나이:21, 주소:서울시 구로구\n"
+     ]
+    }
+   ],
+   "source": [
+    "#person 클래스로 maria, james라는 instance생성\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name, age, address):\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "        self.address=address\n",
+    "\n",
+    "maria=Person(input(\"이름은 무엇인가요?: \"), input(\"나이는 무엇인가요?: \"), input(\"주소는 무엇인가요?: \"))\n",
+    "james=Person(input(\"이름은 무엇인가요?: \"), input(\"나이는 무엇인가요?: \"), input(\"주소는 무엇인가요?: \"))\n",
+    "\n",
+    "print(\"마리아 - 이름:{}, 나이:{}, 주소:{}\".format(maria.name, maria.age, maria.address))\n",
+    "print(\"제임스 - 이름:{}, 나이:{}, 주소:{}\".format(james.name, james.age, james.address))          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "6d719de8-d415-4cec-9dd7-f80f15a132d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "체력을 입력하세요:  511.68\n",
+      "마나를 입력하세요:  334\n",
+      "마법 능력치(AP)를 입력하세요:  298\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "티버의 피해량은 593.70 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#사용자로부터 체력, 마나, AP를 입력받습니다. 주어진 코드에서 Annie클래스를 작성하고 tibber 스킬의 피해량이 출력되게 만드는 코드\n",
+    "#티버의 피해량은 AP*0.65+400이며 AP는 마법능력치를 뜻한다\n",
+    "\n",
+    "class Annie:\n",
+    "    def __init__(self, health, mana, ap):\n",
+    "        self.health = health\n",
+    "        self.mana = mana\n",
+    "        self.ap = ap\n",
+    "        \n",
+    "    def tibbers(self):\n",
+    "        damage = self.ap * 0.65 + 400\n",
+    "        return damage\n",
+    "\n",
+    "# 사용자로부터 입력 받기\n",
+    "# hp, mp, ap = map(float, input(\"애니\").split()\n",
+    "\n",
+    "health = float(input(\"체력을 입력하세요: \"))\n",
+    "mana = float(input(\"마나를 입력하세요: \"))\n",
+    "magic_power = float(input(\"마법 능력치(AP)를 입력하세요: \"))\n",
+    "\n",
+    "# Annie 인스턴스 생성\n",
+    "annie = Annie(health, mana, magic_power)\n",
+    "\n",
+    "# Tibbers 스킬의 피해량 출력\n",
+    "tibbers_damage = annie.tibbers()\n",
+    "print(\"티버의 피해량은 {:.2f} 입니다.\".format(tibbers_damage))\n"
+   ]
   }
  ],
  "metadata": {
