--- a/Notebook/파이썬(제로베이스)/기초_이론.ipynb
+++ b/Notebook/파이썬(제로베이스)/기초_이론.ipynb
@@ -1,20 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "e41fe553-14fa-453f-a7c6-663ba0b150ca",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15772dd9-6035-4036-87ab-a15a172b79ca",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "'''\n",
     "변수란: 데이터가 저장되어 있는 메모리공간\n",
     "\n",
     "변수명 설정\n",
     "1. 영문 사용 권장 (첫글자는 소문자 사용권장)\n",
     "2. 데이터의 의미를 파악할 수 있도록 설정 ex. myWeight vs mw\n",
-    "3. middleExamScore --> 카멜표기법(요즘 많이사용) , middle_exam_score --> 스테이크표기법\n",
+    "3. middleExamScore --> 카멜표기법(요즘 많이사용) , middle_exam_score --> 스네이크표기법\n",
     "4. 예약어 사용금지\n",
     "5. 특수문자 사용금지 (단, 언더바는 가능)\n",
     "6. 공백(앞이나 중간)금지 (단, 뒤에는 가능)\n",
-    "7. 숫자 가능하나 첫번째는 사용금지"
+    "7. 숫자 가능하나 첫번째는 사용금지\n",
+    "'''"
    ]
   },
   {
@@ -53,14 +57,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "84253a8b-d1ff-460a-b44d-7045bed88459",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fe7ee9c-1cc9-4771-a397-b0d6a856d03f",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "'''\n",
     "자료형 변환\n",
     "1. 정수형 <--> 문자열\n",
     "2. 논리형 <--> 문자열 \n",
-    "3. 실수형 <--> 정수형 "
+    "3. 실수형 <--> 정수형 \n",
+    "'''"
    ]
   },
   {
@@ -376,10 +384,11 @@
     }
    ],
    "source": [
-    "#개행 \\n\n",
+    "#출력방식 \n",
+    "#1. f문자열 (포맷 문자열)\n",
     "\n",
     "print(f'사각형의 넓이는: {width*height}')\n",
-    "print(f'사각형의 넓이는: \\n{width*height}')"
+    "print(f'사각형의 넓이는: \\n{width*height}')  #개행 \\n"
    ]
   },
   {
@@ -397,7 +406,7 @@
     }
    ],
    "source": [
-    "#format() 함수, 인덱스활용\n",
+    "#2. format() 함수, 인덱스활용\n",
     "\n",
     "userName ='이혜지'\n",
     "userAge=20\n",
@@ -421,7 +430,7 @@
     }
    ],
    "source": [
-    "#형식문자  \n",
+    "#3. 형식문자  \n",
     "%s --> 문자열\n",
     "%d --> 정수\n",
     "%f --> 실수\n",
@@ -433,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "aaabf486-b798-4adc-8040-5a400e2888c8",
    "metadata": {},
    "outputs": [
@@ -441,28 +450,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pi: 3.14\n",
-      "Pi: 3.141592\n"
+      "Pi: 3.142\n",
+      "Pi: 3.141592\n",
+      "number is: 10.9133\n"
      ]
     }
    ],
    "source": [
     "#소수점 자리 변경\n",
     "\n",
-    "print('Pi: %.2f' % 3.141592)\n",
-    "print('Pi: %.6f' % 3.141592)"
+    "print('Pi: %.3f' % 3.141592)\n",
+    "print('Pi: %.6f' % 3.141592)\n",
+    "\n",
+    "number =10.9132865\n",
+    "print('number is: %.4f' % number) #반올림해서 4째자리까지 보여줌"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6dbd6e98-704c-4bb8-bc42-5fdac766c61e",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abb46c6f-10e6-41d5-abf6-29f1e22b9887",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "'''\n",
     "연산자 종류\n",
     "1. 산술 \n",
     "2. 할당(복합)\n",
     "3. 비교\n",
-    "4. 논리"
+    "4. 논리\n",
+    "'''"
    ]
   },
   {
@@ -617,10 +634,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5840dc25-0437-4340-9334-99b49f5d3b5b",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "490178b6-03ed-48b4-9895-2117cfd48bce",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "'''\n",
     "할당(복합)연산자\n",
     "1. +=\n",
     "2. -=\n",
@@ -628,7 +648,8 @@
     "4. /=\n",
     "5. %=\n",
     "6. //=\n",
-    "7. **="
+    "7. **=\n",
+    "'''"
    ]
   },
   {
@@ -657,28 +678,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b63e3054-9cbf-4327-ba73-a234d56bdbb1",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef9b8ee7-7d42-4ae9-b2aa-7b74329d8968",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "'''\n",
     "비교연산자\n",
     "1. >\n",
     "2. >=\n",
     "3. <\n",
     "4. <=\n",
     "5. ==\n",
-    "6. !="
+    "6. !=\n",
+    "'''"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7da3e478-f0ef-4658-a472-c61a1f1f768e",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d3e8901-04de-45e8-8efe-77ab7663e997",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "'''\n",
     "논리연산자\n",
     "1. and\n",
     "2. or\n",
-    "3. not"
+    "3. not\n",
+    "'''"
    ]
   },
   {
@@ -710,10 +739,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1f921882-6de5-4368-b0d0-56d693fed057",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62ac3968-3b39-4205-8761-22ff47943247",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "'''\n",
     "모듈: 누군가 이미 만들어놓은 기능 (수학. 연산자. 난수 등)\n",
     "Operator 산술모듈\n",
     "1. 덧셈       operate.add(num1,num2)\n",
@@ -735,7 +767,8 @@
     "Operator 논리모듈\n",
     "1. and        operate.and_(num1,num2)\n",
     "2. or         operate.or_(num1,num2)\n",
-    "3. not        operate.not_(num1,num2)"
+    "3. not        operate.not_(num1,num2)\n",
+    "'''"
    ]
   },
   {
@@ -1167,8 +1200,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "423eedc5-319f-40f5-8416-2f802d5837f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m str2\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      3\u001b[0m str3\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBase\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 5\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mstr1\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mstr2\u001b[49m\u001b[38;5;241m-\u001b[39mstr3\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresult: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(result))\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "str1 ='Zero'\n",
+    "str2=''\n",
+    "str3='Base'\n",
+    "\n",
+    "result = str1-str2-str3\n",
+    "print('result: {}'.format(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "761abdaf-8f10-48c7-a816-289c67be5281",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False True\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1='Zero'\n",
+    "str2='zero'\n",
+    "print(str1 == str2, str1!= str2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e26920c-dc26-4fca-b456-4468c0528100",
    "metadata": {},
    "outputs": [],
    "source": []
